src/objects/Environment_User__c.object
<CustomObject>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Environment Users</relationshipLabel>
        <relationshipName>Environment_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <label>Team Member</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Environment Users</relationshipLabel>
        <relationshipName>Environment_Users</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Environment User</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Environment User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>